--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,7 +19,11 @@
     margin: 20px;
     font-size: 25px;
   }
-  
+
+  .navbar a:hover {
+    color: rgb(159, 159, 159);
+  }
+
   .toggleButton {
     width: 100%;
     height: 100px;
