--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -23,6 +23,15 @@
     color: #e9d35b;
     height: 50px;
   }
+
+  .about h3 {
+    margin: 0;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 60px;
+    color: rgb(183, 187, 233);
+    height: 50px;
+  }
+  
   
   .about .prompt {
     width: 40%;
