--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -1,6 +1,5 @@
 .project {
     width: 100%;
-    height: calc(100vh - 100px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,18 +7,25 @@
   }
   
   .project h1 {
-    margin-top: 50px;
+    margin-top: 2%;
     color: #3e497a;
-    font-size: 35px;
+    font-size: 2em;
   }
+
+  
   .project img {
-    width: 700px;
+    width: 100%; /* Adjusted width for responsiveness */
+    max-width: 700px; /* Maximum width for larger screens */
+    height: auto;
     border-radius: 10px;
+    margin-top: 20px; /* Adjusted margin for spacing */
   }
+
   
   .project p {
-    font-size: 35px;
+    font-size: 1.5em;
     color: #3e497a;
+    margin-top: 10px; /* Adjusted margin for spacing */
   }
   
   .project svg {
@@ -48,4 +54,47 @@
 
   .project .futureInfo{
     text-align: center;
+  }
+
+  @media screen and (max-width: 768px) {
+    .project h1 {
+      font-size: 1.85em;
+      margin-top: 3%;
+    }
+
+    .project p {
+      font-size: 1em;
+    }
+
+    .project img {
+      max-width: 60vh;
+    }
+    .project .description {
+      width: 60vh;
+      font-size: 25px;
+    }
+    .project .explanation {
+      width: 60vh;
+      font-size: 20px;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .project h1 {
+      font-size: 1.7em;
+    }
+    .project p {
+      font-size: 0.9em;
+    }
+    .project img {
+      max-width: 40vh;
+    }
+    .project .description {
+      width: 40vh;
+      font-size: 20px;
+    }
+    .project .explanation {
+      width: 40vh;
+      font-size: 15px;
+    }
   }
